[metadata]
name = hoardy
version = 0.0.1
description = Digital storage system to facilitate replication and synchronization across multiple local and online platforms
url = https://github.com/hamelin/hoardy
author = Benoit Hamelin
author_email = benoit@benoithamelin.com
 
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7
install_requires =
    fsspec

[options.packages.find]
exclude = test
